test/tasty/neg/src-2/TestAlphaAnnot.check
TestAlphaAnnot_fail.scala:4: error: Unsupported Scala 3 annotation on method ++: @scala.annotation.alpha("doubleplus"); found in object tastytest.AlphaAnnot.
  def test1 = AlphaAnnot.++  // error
                         ^
1 error
